fix(help-btn): align host element in flex containers

--- a/src/web/axe-os/src/app/components/help-btn/help-btn.component.scss
+++ b/src/web/axe-os/src/app/components/help-btn/help-btn.component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: inline-flex;
+  align-items: center;
+}
+
 .help-btn {
   display: inline-flex;
   align-items: center;
